--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
                         <a href="#" class="cv-link">View CV</a>
                     </div>
                 </div>
+                <div class="cv-item">
+                    <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">hassan benrkia</h3>
+                            <p class="cv-position">developeur</p>
+                        </div>
+                        <a href="cv-hassan.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
