--- a/index.html
+++ b/index.html
@@ -171,6 +171,17 @@
                         <a href="KhitamBafadil.html" class="cv-link">View CV</a>
                     </div>
                 </div>
+
+                <div class="cv-item">
+                    <img src="" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">ikram Abanay</h3>
+                            <p class="cv-position">full stack developper</p>
+                        </div>
+                        <a href="ikramAbanay.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
