--- a/index.html
+++ b/index.html
@@ -180,6 +180,16 @@
                         </div>
                         <a href="cv-hassan.html" class="cv-link">View CV</a>
                     </div>
+                    <div class="cv-item">
+                    <img src="" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">Hajar brnhayyoun</h3>
+                            <p class="cv-position">full stack developper</p>
+                        </div>
+                        <a href="hajarbenhayyoun.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
