--- a/index.html
+++ b/index.html
@@ -171,17 +171,6 @@
                         <a href="KhitamBafadil.html" class="cv-link">View CV</a>
                     </div>
                 </div>
-<<<<<<< HEAD
-
-                <div class="cv-item">
-                    <img src="" alt="Profile Picture" class="profile-pic">
-                    <div class="cv-details">
-                        <div class="cv-info">
-                            <h3 class="cv-name">ikram Abanay</h3>
-                            <p class="cv-position">full stack developper</p>
-                        </div>
-                        <a href="ikramAbanay.html" class="cv-link">View CV</a>
-=======
                 <div class="cv-item">
                     <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
                     <div class="cv-details">
@@ -190,7 +179,16 @@
                             <p class="cv-position">developeur</p>
                         </div>
                         <a href="cv-hassan.html" class="cv-link">View CV</a>
->>>>>>> 330d7d122f3ce20cb0c180721dbe1cb13400f9d8
+                    </div>
+                </div>
+                <div class="cv-item">
+                    <img src="149071.png" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">med said el bakali</h3>
+                            <p class="cv-position">developeur</p>
+                        </div>
+                        <a href="medsaid.html" class="cv-link">View CV</a>
                     </div>
                 </div>
             </div>
