--- a/index.html
+++ b/index.html
@@ -192,6 +192,39 @@
                         <a href="cv-hassan.html" class="cv-link">View CV</a>
                     </div>
                 </div>
+
+                <div class="cv-item">
+                    <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">dina chdadi</h3>
+                            <p class="cv-position">developeura</p>
+                        </div>
+                        <a href="dinacheddadi.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
+
+                <div class="cv-item">
+                    <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">aya xihaja</h3>
+                            <p class="cv-position">developeura</p>
+                        </div>
+                        <a href="ayaxihaja.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
+
+                <div class="cv-item">
+                    <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">sara</h3>
+                            <p class="cv-position">developeura</p>
+                        </div>
+                        <a href="sara.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
