--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     </div>
                 </div>
 
-                
+
                 <div class="cv-item">
                     <img src="149071.png" alt="Profile Picture" class="profile-pic">
                     <div class="cv-details">
@@ -209,7 +209,7 @@
                     <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
                     <div class="cv-details">
                         <div class="cv-info">
-                            <h3 class="cv-name">dina chdadi</h3>
+                            <h3 class="cv-name">dina cheddadi</h3>
                             <p class="cv-position">developeura</p>
                         </div>
                         <a href="dinacheddadi.html" class="cv-link">View CV</a>
@@ -220,10 +220,10 @@
                     <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
                     <div class="cv-details">
                         <div class="cv-info">
-                            <h3 class="cv-name">aya xihaja</h3>
+                            <h3 class="cv-name">aya bouchkaran</h3>
                             <p class="cv-position">developeura</p>
                         </div>
-                        <a href="ayaxihaja.html" class="cv-link">View CV</a>
+                        <a href="ayaentauait.html" class="cv-link">View CV</a>
                     </div>
                 </div>
 
@@ -231,7 +231,7 @@
                     <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
                     <div class="cv-details">
                         <div class="cv-info">
-                            <h3 class="cv-name">sara</h3>
+                            <h3 class="cv-name">sara bentauait</h3>
                             <p class="cv-position">developeura</p>
                         </div>
                         <a href="sara.html" class="cv-link">View CV</a>
