--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                         <a href="ikramAbanay.html" class="cv-link">View CV</a>
                     </div>
                 </div>
+
                 <div class="cv-item">
                     <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
                     <div class="cv-details">
@@ -191,6 +192,8 @@
                         </div>
                         <a href="cv-hassan.html" class="cv-link">View CV</a>
                     </div>
+                </div>
+
                     <div class="cv-item">
                     <img src="" alt="Profile Picture" class="profile-pic">
                     <div class="cv-details">
