--- a/index.html
+++ b/index.html
@@ -174,6 +174,24 @@
             </div>
         </div>
     </section>
+
+    <section class="cvs-section">
+        <div class="container">
+            <div class="cvs-list">
+                <!-- CV Item 1 -->
+                <div class="cv-item">
+                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=200&q=80" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">Douae Dani</h3>
+                            <p class="cv-position">fFull Stuck</p>
+                        </div>
+                        <a href="#" class="cv-link">View CV</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <footer>
         <div class="container">
