--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             background-color: #f5f7fa;
             color: #333;
             line-height: 1.6;
-        }
+        } 
         
         .container {
             max-width: 1200px;
@@ -152,7 +152,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Professional CVs</h1>
+            <h1>Professional CVs dev-full-stack205</h1>
             <p>Browse our collection of professional resumes and CVs</p>
         </div>
     </header>
@@ -171,13 +171,118 @@
                         <a href="KhitamBafadil.html" class="cv-link">View CV</a>
                     </div>
                 </div>
+
+                <div class="cv-item">
+                    <img src="" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">ikram Abanay</h3>
+                            <p class="cv-position">full stack developper</p>
+                        </div>
+                        <a href="ikramAbanay.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
+
+                <div class="cv-item">
+                    <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">hassan benrkia</h3>
+                            <p class="cv-position">developeur</p>
+                        </div>
+                        <a href="cv-hassan.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
+
+                <div class="cv-item">
+                    <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">Alae Ddine El Alami</h3>
+                            <p class="cv-position">developper</p>
+                        </div>
+                        <a href="Alamii.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
+
+                    <div class="cv-item">
+                    <img src="" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">Hajar brnhayyoun</h3>
+                            <p class="cv-position">full stack developper</p>
+                        </div>
+                        <a href="hajarbenhayyoun.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
+                <div class="cv-item">
+                    <img src="149071.png" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">med said el bakali</h3>
+                            <p class="cv-position">developeur</p>
+                        </div>
+                        <a href="medsaid.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
+
+                <div class="cv-item">
+                    <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">dina cheddadi</h3>
+                            <p class="cv-position">developeura</p>
+                        </div>
+                        <a href="dinacheddadi.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
+
+                <div class="cv-item">
+                    <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">aya bouchkaran</h3>
+                            <p class="cv-position">developeura</p>
+                        </div>
+                        <a href="ayaentauait.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
+
+                <div class="cv-item">
+                    <img src="profil.jpg" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">sara bentauait</h3>
+                            <p class="cv-position">developeura</p>
+                        </div>
+                        <a href="sara.html" class="cv-link">View CV</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cvs-section">
+        <div class="container">
+            <div class="cvs-list">
+                <!-- CV Item 1 -->
+                <div class="cv-item">
+                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=200&q=80" alt="Profile Picture" class="profile-pic">
+                    <div class="cv-details">
+                        <div class="cv-info">
+                            <h3 class="cv-name">Douae Dani</h3>
+                            <p class="cv-position">fFull Stuck</p>
+                        </div>
+                        <a href="#" class="cv-link">View CV</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     
     <footer>
         <div class="container">
-            <p>&copy; 2023 Professional CVs Showcase. All rights reserved.</p>
+            <p>&copy; 2025 Professional CVs Showcase. All rights reserved.</p>
         </div>
     </footer>
 </body>
